[gd_scene load_steps=2 format=3 uid="uid://bv2ptsfygg7qg"]

[ext_resource type="Script" uid="uid://cakkrq0gbwrm1" path="res://Scripts/LevelGimicks/sprite_test.gd" id="1_egtmr"]

[node name="SpriteTest" type="Node"]
script = ExtResource("1_egtmr")

[node name="Mario" type="AnimatedSprite2D" parent="."]
position = Vector2(152, 128)

[node name="Luigi" type="AnimatedSprite2D" parent="."]
position = Vector2(184, 128)

[node name="Toad" type="AnimatedSprite2D" parent="."]
position = Vector2(216, 128)

[node name="Toadette" type="AnimatedSprite2D" parent="."]
position = Vector2(248, 128)

[node name="LuigiSMAS" type="AnimatedSprite2D" parent="."]
position = Vector2(184, 160)

[node name="LuigiSMA2" type="AnimatedSprite2D" parent="."]
position = Vector2(184, 192)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 208.0
offset_top = 152.0
offset_right = 248.0
offset_bottom = 202.0

[node name="AnimName" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="PowerState" type="Label" parent="VBoxContainer"]
layout_mode = 2
